--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "pg": "^8.7.3",
+    "qrcode": "^1.5.1",
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
